@@ -1,3 +1,7 @@
+2009-09-20  Perry McFarlane  <perry_m@fastmail.fm>
+* atari_sdl.c: fix support of -nosound with SYNCHRONIZED_SOUND
+
+
 2009-09-18  Perry McFarlane  <perry_m@fastmail.fm>
 * DOC/BUGS, atari.[ch], atari_sdl.c, cfg.c, configure.ac, mzpokeysnd.[ch],
 pbi_xld.c, platform.h, ui.c USAGE : added synchronized sound for the SDL
